# shuttle

./: .commitlintrc.yml  .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml
.github/workflows/: benchmarks.yml  commitlint.yml  docker-image.yml  docs.yml  python-ci.yml
docs/: Makefile  cli.rst  conf.py  developer_guide.rst  index.rst  modules.rst
examples/: .gitignore  fluxnet_shuttle_example.ipynb
src/fluxnet_shuttle/: __init__.py  main.py  models.py  shuttle.py  version.py
src/fluxnet_shuttle/core/: __init__.py  base.py  config.py  decorators.py  exceptions.py  http_utils.py  registry.py  shuttle.py
src/fluxnet_shuttle/plugins/: __init__.py  ameriflux.py  config.yaml  icos.py  tern.py
src/fluxnet_shuttle/sources/: __init__.py  ameriflux.py  icos.py
src/fluxnet_shuttle_lib/: __init__.py  main.py  models.py  shuttle.py  version.py
src/fluxnet_shuttle_lib/core/: __init__.py  base.py  config.py  decorators.py  exceptions.py  http_utils.py  registry.py  shuttle.py
src/fluxnet_shuttle_lib/plugins/: __init__.py  ameriflux.py  config.yaml  icos.py
src/fluxnet_shuttle_lib/sources/: __init__.py  ameriflux.py  fluxnet2015.py  icos.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_core.py  test_core_http_utils.py  test_core_shuttle.py  test_init.py  test_main.py  test_models.py  test_plugin_ameriflux.py  test_plugin_icos.py  test_plugin_tern.py  test_registry.py  test_shuttle.py  test_sources_ameriflux.py  test_sources_fluxnet2015.py  test_sources_icos.py  test_version.py
tests/examples/: __init__.py  test_notebook.py
tests/integration/: README.md  __init__.py  conftest.py  test_ameriflux_integration.py  test_core_shuttle_integration.py  test_icos_integration.py  test_plugin_ameriflux_integration.py  test_plugin_icos_integration.py
