[build-system]
# 'setuptools.build_meta' is the modern, PEP 517-compliant build backend for setuptools projects.
# 'setuptools-git-versioning' is used for dynamic versioning from git tags.
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
# Enables dynamic versioning from git tags.
# 'template' sets the version format for tagged releases.
# 'dev_template' sets the version format for commits after the latest tag.
# 'dirty_template' sets the version format for uncommitted changes.
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}"
dirty_template = "{tag}.post{ccount}+dirty"


[project]
name = "fluxnet-shuttle-lib"
# 'dynamic = ["version"]' tells build tools that the version is determined at build time (by setuptools-git-versioning), not statically set here.
dynamic = ["version"]
description = "A Python library for FLUXNET shuttle operations."
authors = [
    { name = "AMF-FLX" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.6",
    "flake8>=3.8",
    "types-requests",   
    "types-pyyaml",
    "types-aiofiles"
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
examples = [
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]
test-notebooks = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
]

[project.scripts]
fluxnet-shuttle = "fluxnet_shuttle_lib.main:main"

# Entry points for plugin discovery
[project.entry-points."fluxnet_shuttle.plugins"]
ameriflux = "fluxnet_shuttle_lib.plugins.ameriflux:AmeriFluxPlugin"
icos = "fluxnet_shuttle_lib.plugins.icos:ICOSPlugin"
fluxnet2015 = "fluxnet_shuttle_lib.plugins.fluxnet2015:Fluxnet2015Plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include package data
[tool.setuptools.package-data]
"fluxnet_shuttle_lib.plugins" = ["config.yaml"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fluxnet_shuttle_lib --cov-report=term-missing -m 'not integration and not slow and not performance and not examples'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests as performance benchmarks",
    "notebook: marks tests that validate example notebooks",
    "examples: marks tests that validate documentation examples",
]